[gd_scene load_steps=6 format=3 uid="uid://dplbv72nrinx3"]

[ext_resource type="Script" path="res://scripts/UI/menu.gd" id="1_ha8t1"]
[ext_resource type="PackedScene" uid="uid://ds4pfp6ipp408" path="res://scenes/birds/skins/Never/never.tscn" id="2_ctptk"]
[ext_resource type="PackedScene" uid="uid://d1wo5w0rpw6ha" path="res://scenes/UI/settings_menu.tscn" id="3_vatfe"]
[ext_resource type="PackedScene" uid="uid://c1aiqjg3ww8w6" path="res://scenes/UI/button.tscn" id="5_6o7xk"]
[ext_resource type="PackedScene" uid="uid://b4qwu7rbwdjxk" path="res://scenes/game_objects/background.tscn" id="6_okpdq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ha8t1")
character_scene = ExtResource("2_ctptk")
settings_menu_scene = ExtResource("3_vatfe")

[node name="BaseButtons" type="MarginContainer" parent="."]
z_index = 99
layout_direction = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BaseButtons"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="Play" parent="BaseButtons/VBoxContainer" instance=ExtResource("5_6o7xk")]
layout_mode = 2
action_mode = 0
button_text = "Play"

[node name="Store" parent="BaseButtons/VBoxContainer" instance=ExtResource("5_6o7xk")]
layout_mode = 2
button_text = "Store"

[node name="Settings" parent="BaseButtons/VBoxContainer" instance=ExtResource("5_6o7xk")]
layout_mode = 2
action_mode = 0
button_text = "Settings"

[node name="Quit" parent="BaseButtons/VBoxContainer" instance=ExtResource("5_6o7xk")]
layout_mode = 2
action_mode = 0
button_text = "Quit"

[node name="Background" parent="." instance=ExtResource("6_okpdq")]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
